// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IndexedDatabase > should add and get an item 1`] = `
[
  {
    "baseId": "id1",
    "item": {
      "foo": "bar",
    },
  },
]
`;

exports[`IndexedDatabase > should add and get multiple items 1`] = `
[
  {
    "baseId": "id1",
    "item": {
      "foo": "bar",
    },
  },
  {
    "baseId": "id2",
    "item": {
      "foo": "bar",
    },
  },
]
`;
